--- a/package/120data.ipynb
+++ b/package/120data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -29,17 +29,50 @@
       "text/plain": [
        "Index(['orig.ident', 'nCount_RNA', 'nFeature_RNA', 'UMAP_1', 'UMAP_2',\n",
        "       'Cluster', 'Celltype..malignancy.', 'Celltype..major.lineage.',\n",
-       "       'Celltype..minor.lineage.', 'Patient', 'Sample', 'Tissue'],\n",
+       "       'Celltype..minor.lineage.', 'Patient', 'Sample', 'Tissue', 'celltype'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "t = sc.read_h5ad('./datas/120/2/sample1.h5')\n",
     "t.obs.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CART_IP@AAACCTGAGATCCTGT      CD4Tconv\n",
+       "CART_IP@AAACCTGAGGAATGGA      CD4Tconv\n",
+       "CART_IP@AAACCTGCATGTCGAT      CD4Tconv\n",
+       "CART_IP@AAACCTGGTAGCGCAA      CD4Tconv\n",
+       "CART_IP@AAACCTGGTGCATCTA      CD4Tconv\n",
+       "                                ...   \n",
+       "Tcells_PP@TGGCTGGAGCCACTAT     Tprolif\n",
+       "Tcells_PP@TTATGCTAGCTCTCGG     Tprolif\n",
+       "Tcells_PP@TTCTCAACACAGTCGC     Tprolif\n",
+       "Tcells_PP@TTTCCTCCATTCTTAC     Tprolif\n",
+       "Tcells_RP@TGGGAAGCATTCTTAC     Tprolif\n",
+       "Name: Celltype..major.lineage., Length: 27961, dtype: category\n",
+       "Categories (4, object): ['CD4Tconv', 'CD8T', 'CD8Tex', 'Tprolif']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.obs['Celltype..major.lineage.']"
    ]
   },
   {
